[gd_scene load_steps=6 format=2]

[ext_resource path="res://players/rigidplayer.gd" type="Script" id=1]
[ext_resource path="res://tools/direction_arrow.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="RigidPlayer" type="RigidBody2D"]
contacts_reported = 10
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )

[node name="head" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="feet" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="jump_charger" parent="." instance=ExtResource( 2 )]
position = Vector2( -3, 3 )
points = PoolVector2Array( 0, 0, 0, -5 )

[node name="control_vector" parent="." instance=ExtResource( 2 )]
rotation = 0.186847
width = 0.5
default_color = Color( 0.4, 1, 0.45098, 1 )

[node name="velocity_vector" parent="." instance=ExtResource( 2 )]
[connection signal="body_shape_entered" from="." to="." method="_on_RigidPlayer_body_shape_entered"]
